--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <header>
+        <h1>lecture activity</h1>
+    </header>
+
+    <nav>
+        <a href="Link1">Link number 1</a>
+        <a href="Link2">Link number 2</a>
+        <a href="Link3">Link number 3</a>
+    </nav>
     
+    <main>
+        <h2>header 2</h2>
+        <h3>header 3</h3>
+        <p>Paragraph 1 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Paragraph 2 In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada</p>
+    </main>
+
+    <aside>
+        <ol>
+            <li>Number 1</li>
+            <li>Number 2</li>
+            <li>Number 3</li>
+        </ol>
+    </aside>
 </body>
 </html>
