Added a footer that clears all three columns

--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
             <li>Number 3</li>
         </ol>
     </aside>
+
+    <footer id="footer">&copy;Copyright | Pedro</footer>
 </body>
 </html>
